# fastapi/src/data/schemas/post.py
@@ -2,6 +2,7 @@ from __future__ import annotations
 from typing import List, ForwardRef, TYPE_CHECKING, Optional
 from pydantic import BaseModel, ValidationError, field_validator
 from datetime import datetime
+from data import models
 
 # if TYPE_CHECKING:
 #     from .user import User
@@ -19,6 +20,7 @@ class Post(PostBase):
     id: int
     posted_on: datetime
     edited: bool
+    poster: str
     
     comments: Optional[List[ForwardRef("Comment")]] = None
     likes: Optional[List[ForwardRef("Like")]] = None
@@ -26,3 +28,8 @@ class Post(PostBase):
     class Config:
         orm_mode = True
         from_attributes = True
+    
+    @field_validator("poster", mode="before")
+    @classmethod
+    def extract_username(cls, user_db: models.User) -> str:
+        return user_db.username
